--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
 *{
-  list-style: none;
-  text-decoration: none;
+  list-style: none !important;
+  text-decoration: none !important;
+  overflow-x: hidden !important;
+}
+body{
+  margin: 0;
+  /* background-color: rgb(228, 228, 228); */
 }
